<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kurt.pennington.distaneiii.DistanceMainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/total_distance_textView"
        android:layout_marginTop="53dp"
        android:textSize="@dimen/abc_text_size_display_2_material"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_traveled"
        android:id="@+id/distance_label_textView"
        android:layout_below="@+id/total_distance_textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <Button
        android:text="@string/start"
        android:id="@+id/start_button"
        style="@style/distance_test_button_style"
        android:background="@color/start_color"
        android:layout_below="@+id/distance_label_textView"
        android:layout_alignStart="@+id/stop_button"
        android:layout_marginTop="36dp"/>

    <Button

        android:text="@string/stop"
        android:id="@+id/stop_button"
        style="@style/distance_test_button_style"
        android:background="@color/stop_color"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:foregroundTint="#ffffff"
        android:foregroundTintMode="screen"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:id="@+id/linearLayout"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lat_textView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/latitude"
                    android:id="@+id/lat_label"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/long_textView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/longitude"
                    android:id="@+id/long_label"/>
            </LinearLayout>

        </LinearLayout>

        <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/surfaceView"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/priority"
                    android:id="@+id/priority_label"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/priority_textView"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/interval"
                    android:id="@+id/elapsed_time_label"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/elapsed_time_textView"
                    android:layout_weight="1"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/accuracy"
                    android:id="@+id/accuracy_label"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/accuracy_textView"
                    android:textAlignment="center"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
